spade-tests/src/snapshots/spade_tests__usefulness__tests__multiple_missing_enum_branch_errors.snap
---
source: spade-tests/src/usefulness.rs
---
enum X {
    A,
    B,
    C,
    D,
}

fn uwu(x: X) -> bool {
    match x {
        X::A => true,
    }
}


error: Non-exhaustive match: patterns X::B, X::C and 1 more not covered
   ┌─ testinput:9:5
   │  
 9 │ ╭     match x {
10 │ │         X::A => true,
11 │ │     }
   │ ╰─────^ patterns X::B, X::C and 1 more not covered
