spade-tests/src/snapshots/spade_tests__usefulness__tests__non_exhaustive_pattern_with_sub_integer_range_causes_good_error_message.snap
---
source: spade-tests/src/usefulness.rs
---
fn test(in: (int<8>, bool)) -> bool {
    match in {
        (val, true) => true,
    }
}


error: Non-exhaustive match: pattern (-128..=127, false) not covered
  ┌─ testinput:2:5
  │  
2 │ ╭     match in {
3 │ │         (val, true) => true,
4 │ │     }
  │ ╰─────^ pattern (-128..=127, false) not covered
