spade-tests/src/snapshots/spade_tests__usefulness__tests__refutable_pattern_reg_errors.snap
---
source: spade-tests/src/usefulness.rs
---
entity A(clk: clock) -> bool {
    reg(clk) true = false;
    false
}


error: Refutable pattern in local binding: pattern false not covered
  ┌─ testinput:2:14
  │
2 │     reg(clk) true = false;
  │              ^^^^ pattern pattern false not covered
  │
  = note: reg requires a pattern which matches all possible options, such as a variable, struct or enum with only 1 option.
  = help: you might want to use match statement to handle different cases
