spade-tests/src/snapshots/spade_tests__usefulness__tests__struct_missing_pattern_message_is_good.snap
---
source: spade-tests/src/usefulness.rs
---
    struct A {
        x: bool,
        y: bool,
    }
fn test(input: A) -> bool {
    match input {
        A(true, true) => true
    }
}


error: Non-exhaustive match: patterns A(x: true, y: false), A(x: false, y: false) and 1 more not covered
  ┌─ testinput:6:5
  │  
6 │ ╭     match input {
7 │ │         A(true, true) => true
8 │ │     }
  │ ╰─────^ patterns A(x: true, y: false), A(x: false, y: false) and 1 more not covered


