spade-tests/src/snapshots/spade_tests__usefulness__tests__struct_missing_pattern_message_with_named_args_is_good.snap
---
source: spade-tests/src/usefulness.rs
---
    struct A {
        x: bool,
        y: bool,
    }
fn test(input: A) -> bool {
    match input {
        A$(y:true, x: true) => true,
        A$(y:true, x: false) => true,
        A$(y:false, x: false) => true,
    }
}


error: Non-exhaustive match: pattern A(x: true, y: false) not covered
   ┌─ testinput:6:5
   │  
 6 │ ╭     match input {
 7 │ │         A$(y:true, x: true) => true,
 8 │ │         A$(y:true, x: false) => true,
 9 │ │         A$(y:false, x: false) => true,
10 │ │     }
   │ ╰─────^ pattern A(x: true, y: false) not covered


